--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mustafiz-codes.github.io/netflix-clone-react/",
+  "homepage": "https://mustafiz-codes.github.io/",
   "name": "netflix-clone",
   "version": "0.1.0",
   "private": true,
